--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #111;
-  color: #bbb;
+ 
 }
 
 a{
@@ -17,6 +16,18 @@ a{
   color: inherit;
 }
 
+.light{
+  background-color: #white;
+  color: #111;
+}
+
+.dark{
+  background-color: #111;
+  color: #bbb;
+}
+.theme{
+  transition: 1s all ease;
+}
 .container{
   max-width: 1366px;
   min-height: 100vh;
