--- a/src/app/dashboard/(auth)/login/page.module.css
+++ b/src/app/dashboard/(auth)/login/page.module.css
@@ -1,1 +1,34 @@
-.container{}
+.container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.form{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.input{
+    padding: 20px;
+    background-color: transparent;
+    border: 2px solid #bbb;
+    border-radius: 5px;
+    color: #bbb;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.button{
+    padding: 20px;
+    cursor: pointer;
+    background-color: #35c28b;
+    border: none;
+    border-radius: 5px;  
+    color: #eee;
+    font-weight: bold;
+}
